update some index2

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                    <div class="advert_title" style="font-size: 14px;"><a href="#">&nbsp首頁</a></div>
+                    <div class="advert_title" style="font-size: 14px;"><a href="../News/index.html">&nbsp首頁</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
