--- a/index2_life.html
+++ b/index2_life.html
@@ -115,7 +115,7 @@
 				            <div class="cat_menu_text" ></div>
 						</div>
 				        <ul class="cat_menu">
-				            <li><a href="../News/index2.html" style="font-weight: 600;color: #17a2b8;">首頁<i class="fas fa-chevron-right ml-auto"></i></a></li>
+				            <li><a href="../News/index2.html">首頁<i class="fas fa-chevron-right ml-auto"></i></a></li>
                             <li class="hassubs">
 				                <a href="../News/index2_internation.html">國際<i class="fas fa-chevron-right"></i></a>
 				                <ul>
@@ -205,7 +205,7 @@
                                     <li><a href="regular.html">憂鬱症<i class="fas fa-chevron-down"></i></a></li>
                                 </ul>
                             </li>
-                            <li class="hassubs"><a href="../News/index2_life.html">生活<i class="fas fa-chevron-right"></i></a>
+                            <li class="hassubs"><a href="../News/index2_life.html" style="font-weight: 600;color: #17a2b8;">生活<i class="fas fa-chevron-right"></i></a>
                                 <ul>
                                     <li><a href="shop.html">交通旅遊<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="product.html">美食餐廳<i class="fas fa-chevron-down"></i></a></li>
@@ -233,13 +233,13 @@
                 </div>
             </nav>
         </div>               
-        <!-- Trends -->
-        <div id="row_2" class="col-md-10">
+        <!-- Trends Slider -->
+        <div  id="row_2" class="col-md-10">
             <div class="trends">
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;"><a href="../News/index2.html">&nbsp首頁</a></div>
+                    <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp生活</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -249,147 +249,16 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/photo4.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_3.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">財經/2020報稅</a></div>
+                                                <div class="trends_category"><a href="#">生活/文教資訊</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">免結算申報標準大公開，年收40.8萬以下免繳稅</a></div>
+                                                    <div class="trends_name"><a href="product.html">白老虎瀕臨絕種，人類開墾嚴重影響其棲息地。</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
                                                 <li class="trends_mark trends_discount">-25%</li>
                                                 <li class="trends_mark trends_new">HOT</li>
-                                            </ul>
-                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
-                                        </div>
-                                    </div>
-                                    <!-- Trends Slider Item -->
-                                    <div class="owl-item">
-                                        <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_1.jpg" alt=""></div>
-                                            <div class="trends_content">
-                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
-                                                <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">香港發起「反惡歌法」大遊行，港警舉旗射煙霧彈驅離</a></div>
-                                                </div>
-                                            </div>
-                                            <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">new</li>
-                                            </ul>
-                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
-                                        </div>
-                                    </div>
-                                    <!-- Trends Slider Item -->
-                                    <div class="owl-item">
-                                        <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/photo2.jpg" alt=""></div>
-                                            <div class="trends_content">
-                                                <div class="trends_category"><a href="#">科技/3C家電</a></div>
-                                                <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">2020年五大科技趨勢，重大的改變和顛覆。</a></div>
-                                                </div>
-                                            </div>
-                                            <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">new</li>
-                                            </ul>
-                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row" style="padding-top: 20px;">
-                        <!-- Trends Slider -->
-                        <div class="col-lg-12">
-                            <div class="trends_slider_container">
-                                <!-- Trends Slider -->
-                                <div class="owl-carousel owl-theme trends_slider">
-                                    <!-- Trends Slider Item -->
-                                    <div class="owl-item">
-                                        <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_8.jpg" alt=""></div>
-                                            <div class="trends_content">
-                                                <div class="trends_category"><a href="#">經濟/房地產</a></div>
-                                                <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">疫情趨緩房市跟著開紅盤 五月交易量大增2成</a></div>
-                                                </div>
-                                            </div>
-                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
-                                        </div>
-                                    </div>
-                                    <!-- Trends Slider Item -->
-                                    <div class="owl-item">
-                                        <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_9.jpg" alt=""></div>
-                                            <div class="trends_content">
-                                                <div class="trends_category"><a href="#">運動/棒球</a></div>
-                                                <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">追分時刻可惜了，宜蘭縣跑者遭牽制出局</a></div>
-                                                </div>
-                                            </div>
-                                            <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">new</li>
-                                            </ul>
-                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
-                                        </div>
-                                    </div>
-                                    <!-- Trends Slider Item -->
-                                    <div class="owl-item">
-                                        <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_10.jpg" alt=""></div>
-                                            <div class="trends_content">
-                                                <div class="trends_category"><a href="#">天氣</a></div>
-                                                <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">一週天氣快看！午後雷陣雨旺盛 這天起高溫恐破36度</a></div>
-                                                </div>
-                                            </div>
-                                            <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">new</li>
-                                            </ul>
-                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>                
-                    <div class="row" style="padding-top: 20px;">
-                        <!-- Trends Slider -->
-                        <div class="col-lg-12">
-                            <div class="trends_slider_container">
-                                <!-- Trends Slider -->
-                                <div class="owl-carousel owl-theme trends_slider">
-                                    <!-- Trends Slider Item -->
-                                    <div class="owl-item">
-                                        <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_6.jpg" alt=""></div>
-                                            <div class="trends_content">
-                                                <div class="trends_category"><a href="#">健康/養生飲食</a></div>
-                                                <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">料理達人教你3技巧 煮出香甜多汁的高麗菜、杏鮑菇！</a></div>
-                                                </div>
-                                            </div>
-                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
-                                        </div>
-                                    </div>
-                                    <!-- Trends Slider Item -->
-                                    <div class="owl-item">
-                                        <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_14.jpg" alt=""></div>
-                                            <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/影視名人</a></div>
-                                                <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">疫情舒緩開第一槍 八三夭要現場開唱</a></div>
-                                                </div>
-                                            </div>
-                                            <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">new</li>
                                             </ul>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
@@ -411,6 +280,23 @@
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
+                                    <!-- Trends Slider Item -->
+                                    <div class="owl-item">
+                                        <div class="trends_item">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_2.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">生活/文教資訊</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">口罩解禁！部分通路開賣日期確定了</a></div>
+                                                </div>
+                                            </div>
+                                            <ul class="trends_marks">
+                                                <li class="trends_mark trends_discount">-25%</li>
+                                                <li class="trends_mark trends_new">new</li>
+                                            </ul>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -424,41 +310,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_11.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_38.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">新冠病毒</a></div>
+                                                <div class="trends_category"><a href="#">生活/美食餐廳</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">台灣今零確診 已49天無本土病例 全球破606萬例、36.9萬死</a></div>
-                                                </div>
-                                            </div>
-                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
-                                        </div>
-                                    </div>
-                                    <!-- Trends Slider Item -->
-                                    <div class="owl-item">
-                                        <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_12.jpg" alt=""></div>
-                                            <div class="trends_content">
-                                                <div class="trends_category"><a href="#">影音</a></div>
-                                                <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">人手一台機器人! 專家:10年內規模超過手機</a></div>
-                                                </div>
-                                            </div>
-                                            <ul class="trends_marks">
-                                                <li class="trends_mark trends_discount">-25%</li>
-                                                <li class="trends_mark trends_new">new</li>
-                                            </ul>
-                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
-                                        </div>
-                                    </div>
-                                    <!-- Trends Slider Item -->
-                                    <div class="owl-item">
-                                        <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_13.jpg" alt=""></div>
-                                            <div class="trends_content">
-                                                <div class="trends_category"><a href="#">娛樂/電影</a></div>
-                                                <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">十部只有受過傷才能真正看懂的經典老電影，讓你找回尋夢的勇氣</a></div>
+                                                    <div class="trends_name"><a href="product.html">台南特產通通搬出來！盼陳時中加持助行銷</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
@@ -469,8 +325,8 @@
                         </div>
                     </div>
                 </div>
-            </div>        
-        </div>    
+            </div>
+        </div>
     </div>
 
     <!-- Copyright -->
