--- a/index4.html
+++ b/index4.html
@@ -131,7 +131,7 @@
 				        <ul class="cat_menu">
 				            <li><a href="../News/index4.html" style="font-weight: 600;color: #17a2b8;">首頁<i class="fas fa-chevron-right ml-auto"></i></a></li>
                             <li class="hassubs">
-				                <a href="../News/index_internation.html">國際<i class="fas fa-chevron-right"></i></a>
+				                <a href="../News/index4_internation.html">國際<i class="fas fa-chevron-right"></i></a>
 				                <ul>
 								    <li>
 								        <a href="#">國際大事<i class="fas fa-chevron-down"></i></a>
@@ -254,7 +254,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                 <div class="advert_title" style="font-size: 14px;"><a href="#">&nbsp首頁</a></div>
+                <div class="advert_title" style="font-size: 14px;"><a href="#">&nbsp首頁</a></div>
                     <div class="row" style="padding-top: 10px;">
                         <div class="adverts">
                             <div class="container">
