--- a/index2_art.html
+++ b/index2_art.html
@@ -187,7 +187,7 @@
                                     <li><a href="product.html">3C產品開箱<i class="fas fa-chevron-down"></i></a></li>
                                 </ul>        
                             </li>         
-				            <li class="hassubs"><a href="../News/index2_art.html">娛樂<i class="fas fa-chevron-right"></i></a>
+				            <li class="hassubs"><a href="../News/index2_art.html" style="font-weight: 600;color: #17a2b8;">娛樂<i class="fas fa-chevron-right"></i></a>
                                 <ul>
                                     <li><a href="shop.html">電影<i class="fas fa-chevron-down"></i></a></li>
                                     <li><a href="product.html">影視名人<i class="fas fa-chevron-down"></i></a></li>
