--- a/index2_internation.html
+++ b/index2_internation.html
@@ -115,9 +115,9 @@
 				            <div class="cat_menu_text" ></div>
 						</div>
 				        <ul class="cat_menu">
-				            <li><a href="../News/index2.html" style="font-weight: 600;color: #17a2b8;">首頁<i class="fas fa-chevron-right ml-auto"></i></a></li>
+				            <li><a href="../News/index2.html">首頁<i class="fas fa-chevron-right ml-auto"></i></a></li>
                             <li class="hassubs">
-				                <a href="../News/index2_internation.html">國際<i class="fas fa-chevron-right"></i></a>
+				                <a href="../News/index2_internation.html" style="font-weight: 600;color: #17a2b8;">國際<i class="fas fa-chevron-right"></i></a>
 				                <ul>
 								    <li>
 								        <a href="#">國際大事<i class="fas fa-chevron-down"></i></a>
@@ -239,7 +239,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                    <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp新冠肺炎</a></div>
+                    <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp國際</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -249,11 +249,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_40.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_1.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">新冠肺炎</a></div>
+                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">新冠肺炎台灣確診身份關係圖 史上最清楚一秒看懂</a></div>
+                                                    <div class="trends_name"><a href="product.html">香港發起「反惡歌法」大遊行，港警舉旗射煙霧彈驅離</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -266,11 +266,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_40.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_18.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">新冠肺炎</a></div>
+                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">新冠肺炎台灣確診身份關係圖 史上最清楚一秒看懂</a></div>
+                                                    <div class="trends_name"><a href="product.html">北京仍呼籲合作，但已加強抗衡美國的決心</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -283,11 +283,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_40.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_19.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">新冠肺炎</a></div>
+                                                <div class="trends_category"><a href="#">國際/國際大事</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">新冠肺炎台灣確診身份關係圖 史上最清楚一秒看懂</a></div>
+                                                    <div class="trends_name"><a href="product.html">特朗普宣布美國將取消香港特殊待遇、退出WHO</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -310,13 +310,17 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_40.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_20.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">新冠肺炎</a></div>
+                                                <div class="trends_category"><a href="#">國際/紐約時報</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">新冠肺炎台灣確診身份關係圖 史上最清楚一秒看懂</a></div>
+                                                    <div class="trends_name"><a href="product.html">他揭露了韋恩斯坦性醜聞，但他的報導真的無懈可擊嗎？</a></div>
                                                 </div>
                                             </div>
+                                            <ul class="trends_marks">
+                                                <li class="trends_mark trends_discount">-25%</li>
+                                                <li class="trends_mark trends_new">HOT</li>
+                                            </ul>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
                                     </div>
