--- a/index_internation.html
+++ b/index_internation.html
@@ -115,7 +115,7 @@
 								<ul class="standard_dropdown main_nav_dropdown">
 									<li><a href="../News/index.html">首頁<i class="fas fa-chevron-down"></i></a></li>
 									<li class="hassubs">
-										<a href="../News/index_internation.html">國際<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index_internation.html" style="font-weight: 600;color: #17a2b8;">國際<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
 												<a href="#">國際大事<i class="fas fa-chevron-down"></i></a>
@@ -131,7 +131,7 @@
 										</ul>
 									</li>
 									<li class="hassubs">
-										<a href="../News/index_political.html" style="font-weight: 600;color: #17a2b8;">政治<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index_political.html">政治<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
 												<a href="#">政治影音<i class="fas fa-chevron-down"></i></a>
@@ -331,7 +331,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp政治</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp國際</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
