--- a/index_life.html
+++ b/index_life.html
@@ -332,7 +332,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp健康</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp生活</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -342,11 +342,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_6.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_3.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">健康/養生飲食</a></div>
+                                                <div class="trends_category"><a href="#">生活/文教資訊</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">料理達人教你3技巧 煮出香甜多汁的高麗菜、杏鮑菇！</a></div>
+                                                    <div class="trends_name"><a href="product.html">白老虎瀕臨絕種，人類開墾嚴重影響其棲息地。</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -359,11 +359,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_35.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_5.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">健康/養生飲食</a></div>
+                                                <div class="trends_category"><a href="#">生活/文教資訊</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">1/4機率！胃食道逆流恐致癌 3蔬果5原則顧性命</a></div>
+                                                    <div class="trends_name"><a href="product.html">和敦南誠品說拜拜 民眾徹夜未眠重溫回憶</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -376,11 +376,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_36.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_2.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">健康/憂鬱症</a></div>
+                                                <div class="trends_category"><a href="#">生活/文教資訊</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">憂鬱症五大類型與常見症狀，3分鐘檢測憂鬱指數</a></div>
+                                                    <div class="trends_name"><a href="product.html">口罩解禁！部分通路開賣日期確定了</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -403,11 +403,11 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_37.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_38.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">健康/養生飲食</a></div>
+                                                <div class="trends_category"><a href="#">生活/美食餐廳</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">空品差，只能喝豬血湯清肺？醫師這樣說</a></div>
+                                                    <div class="trends_name"><a href="product.html">台南特產通通搬出來！盼陳時中加持助行銷</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
