--- a/index3.html
+++ b/index3.html
@@ -31,11 +31,12 @@
 							<div class="top_bar_menu">
 								<ul class="standard_dropdown top_bar_dropdown">
 									<li>
-										<a href="#">語言<i class="fas fa-chevron-down"></i></a>
+										<a href="#">樣板選擇<i class="fas fa-chevron-down"></i></a>
 										<ul>
-											<li><a href="#">Italian</a></li>
-											<li><a href="#">Spanish</a></li>
-											<li><a href="#">Japanese</a></li>
+											<li><a href="./index.html">橫列區塊式</a></li>
+											<li><a href="./index2.html">直列區塊式</a></li>
+                                            <li><a href="./index3.html">橫列條列式</a></li>
+                                            <li><a href="./index4.html">直列區塊式</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -131,7 +132,7 @@
 										</ul>
 									</li>
 									<li class="../News/index3_political.html">
-										<a href="#">政治<i class="fas fa-chevron-down"></i></a>
+										<a href="../News/index3_political.html">政治<i class="fas fa-chevron-down"></i></a>
 										<ul>
 											<li>
 												<a href="#">政治影音<i class="fas fa-chevron-down"></i></a>
@@ -141,6 +142,7 @@
 													<li><a href="#">2020藍綠版圖<i class="fas fa-chevron-down"></i></a></li>
 												</ul>
 											</li>
+                                            <li><a href="../News/index3_political.html">政治要聞<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="#">三讀法案<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="#">兩岸議題<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="#">邦交國<i class="fas fa-chevron-down"></i></a></li>
