--- a/index2_political.html
+++ b/index2_political.html
@@ -143,7 +143,7 @@
 								            <li><a href="#">2020藍綠版圖<i class="fas fa-chevron-down"></i></a></li>
 								        </ul>
 								    </li>
-                                    <li><a href="#">政治要聞<i class="fas fa-chevron-down"></i></a></li>
+                                    <li><a href="./index2_political.html">政治要聞<i class="fas fa-chevron-down"></i></a></li>
 								    <li><a href="#">三讀法案<i class="fas fa-chevron-down"></i></a></li>
 								    <li><a href="#">兩岸議題<i class="fas fa-chevron-down"></i></a></li>
 								    <li><a href="#">邦交國<i class="fas fa-chevron-down"></i></a></li>
@@ -235,11 +235,11 @@
         </div>               
         <!-- Trends Slider -->
         <div  id="row_2" class="col-md-10">
-            <div class="trends">
+                        <div class="trends">
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp政治</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="./index2_political.html">&nbsp政治</a>><a href="./index2_political.html">政治要聞</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
@@ -251,7 +251,7 @@
                                         <div class="trends_item is_new">
                                             <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_3.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">政治/政治要聞</a></div>
+                                                <div class="trends_category"><a href="./index2_political.html">政治/政治要聞</a></div>
                                                 <div class="trends_info clearfix">
                                                     <div class="trends_name"><a href="product.html">紓困振興引爆民怨 時力民調：蔡英文滿意度大降近9%</a></div>
                                                 </div>
@@ -268,9 +268,9 @@
                                         <div class="trends_item">
                                             <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_8.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">政治/兩岸議題</a></div>
+                                                <div class="trends_category"><a href="#">政治/政治要聞</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">習近平嗆武統 歐洲議會批中挺台</a></div>
+                                                    <div class="trends_name"><a href="product.html">習近平嗆武力統一引關注！歐洲議會「1句話」聲援台灣</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -285,9 +285,9 @@
                                         <div class="trends_item">
                                             <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_16.jpg" alt=""></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">政治/邦交國</a></div>
+                                                <div class="trends_category"><a href="#">政治/政治要聞</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">友邦巴拉圭轉向北京？參院表決未通過</a></div>
+                                                    <div class="trends_name"><a href="product.html">巴拉圭參院4月表決籲巴總統斷交台轉投中國 9票之差否決</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
@@ -310,16 +310,49 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_16.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href="./correct2.html"><img src="images/yahoo/new_p_17.jpg" alt=""></a></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">政治/三讀法案</a></div>
+                                                <div class="trends_category"><a href="./index2_political.html">政治/政治要聞</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">《反滲透法》三讀通過！配合「境外敵對勢力」干預選舉最重關5年、罰千萬</a></div>
+                                                    <div class="trends_name"><a href="./correct2.html">《反滲透法》三讀通過！配合「境外敵對勢力」干預選舉最重關5年、罰千萬</a></div>
                                                 </div>
                                             </div>
                                             <ul class="trends_marks">
                                                 <li class="trends_mark trends_discount">-25%</li>
                                                 <li class="trends_mark trends_new">HOT</li>
+                                            </ul>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
+                                    <div class="owl-item">
+                                        <div class="trends_item">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_41.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">政治/政治要聞</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">政院政委重分工 黃致達督導公平會、研考、主計總處與人總</a></div>
+                                                </div>
+                                            </div>
+                                            <ul class="trends_marks">
+                                                <li class="trends_mark trends_discount">-25%</li>
+                                                <li class="trends_mark trends_new">new</li>
+                                            </ul>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
+                                    <!-- Trends Slider Item -->
+                                    <div class="owl-item">
+                                        <div class="trends_item">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_42.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">政治/政治要聞</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">「投票有壓力就報案！」 高雄檢方成立罷韓投票因應小組</a></div>
+                                                </div>
+                                            </div>
+                                            <ul class="trends_marks">
+                                                <li class="trends_mark trends_discount">-25%</li>
+                                                <li class="trends_mark trends_new">new</li>
                                             </ul>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
                                         </div>
@@ -330,9 +363,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    
-   
+        </div> 
     </div>
 
     <!-- Copyright -->
