--- a/index2_tech.html
+++ b/index2_tech.html
@@ -301,7 +301,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row" style="padding-top: 20px;">
+                                        <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
                             <div class="trends_slider_container">
@@ -310,11 +310,35 @@
                                     <!-- Trends Slider Item -->
                                     <div class="owl-item">
                                         <div class="trends_item is_new">
-                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_31.jpg" alt=""></div>
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href="./correct2.html"><img src="images/yahoo/new_p_31.jpg" alt=""></a></div>
                                             <div class="trends_content">
-                                                <div class="trends_category"><a href="#">科技/人工智慧</a></div>
+                                                <div class="trends_category"><a href="./index2_tech.html">科技/人工智慧</a></div>
                                                 <div class="trends_info clearfix">
-                                                    <div class="trends_name"><a href="product.html">Google即時翻譯超方便？逼近真人對話 線上會議、課程內容全都講給你聽！</a></div>
+                                                    <div class="trends_name"><a href="./correct2.html">Google即時翻譯超方便？逼近真人對話 線上會議、課程內容全都講給你聽！</a></div>
+                                                </div>
+                                            </div>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
+                                    <div class="owl-item">
+                                        <div class="trends_item is_new">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><a href=""><img src="images/yahoo/new_p_43.jpg" alt=""></a></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="./index_tech.html">科技/手機APP</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="">印度「移除中國APP」爆紅卻慘遭下架！谷歌Google「4字」回應</a></div>
+                                                </div>
+                                            </div>
+                                            <div class="trends_fav"><i class="fas fa-heart"></i></div>
+                                        </div>
+                                    </div>
+                                    <div class="owl-item">
+                                        <div class="trends_item is_new">
+                                            <div class="trends_image d-flex flex-column align-items-center justify-content-center"><img src="images/yahoo/new_p_44.jpg" alt=""></div>
+                                            <div class="trends_content">
+                                                <div class="trends_category"><a href="#">科技/手機APP</a></div>
+                                                <div class="trends_info clearfix">
+                                                    <div class="trends_name"><a href="product.html">Facebook更新「動態貼文」！篩選、刪除、封存更快速</a></div>
                                                 </div>
                                             </div>
                                             <div class="trends_fav"><i class="fas fa-heart"></i></div>
