--- a/index3_political.html
+++ b/index3_political.html
@@ -141,6 +141,7 @@
 													<li><a href="#">2020藍綠版圖<i class="fas fa-chevron-down"></i></a></li>
 												</ul>
 											</li>
+                                            <li><a href="../News/index3_political.html">政治要聞<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="#">三讀法案<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="#">兩岸議題<i class="fas fa-chevron-down"></i></a></li>
 											<li><a href="#">邦交國<i class="fas fa-chevron-down"></i></a></li>
@@ -329,7 +330,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                 <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp政治</a></div>
+                    <div class="advert_title" style="font-size: 14px;">目前位置：<a href="./index3_political.html">&nbsp政治</a>><a href="./index3_political.html">政治要聞</a></div>
                     <div class="row" style="padding-top: 10px;">
                         <div class="adverts">
                             <div class="container">
@@ -346,8 +347,8 @@
                                     <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">政治/兩岸議題</a></div>
-                                                <div class="advert_text"><a href="#">習近平嗆武統 歐洲議會批中挺台</a></div>
+                                                <div class="advert_title"><a href="#">政治/政治要聞</a></div>
+                                                <div class="advert_text"><a href="#">習近平嗆武力統一引關注！歐洲議會「1句話」聲援台灣</a></div>
                                             </div>
                                             <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_8.jpg" alt=""></div></div>
                                         </div>
@@ -355,8 +356,8 @@
                                      <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">政治/邦交國</a></div>
-                                                <div class="advert_text"><a href="#">友邦巴拉圭轉向北京？參院表決未通過</a></div>
+                                                <div class="advert_title"><a href="#">政治/政治要聞</a></div>
+                                                <div class="advert_text"><a href="#">巴拉圭參院4月表決籲巴總統斷交台轉投中國 9票之差否決</a></div>
                                             </div>
                                             <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_16.jpg" alt=""></div></div>
                                         </div>
@@ -364,12 +365,30 @@
                                      <div class="col-lg-12 advert_col">
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
-                                                <div class="advert_title"><a href="#">政治/三讀法案</a></div>
-                                                <div class="advert_text"><a href="#">《反滲透法》三讀通過！配合「境外敵對勢力」干預選舉最重關5年、罰千萬</a></div>
+                                                <div class="advert_title"><a href="./index3_political.html">政治/政治要聞</a></div>
+                                                <div class="advert_text"><a href="./correct3.html">《反滲透法》三讀通過！配合「境外敵對勢力」干預選舉最重關5年、罰千萬</a></div>
                                             </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_16.jpg" alt=""></div></div>
+                                            <div class="ml-auto"><div class="advert_image"><a href="./correct3.html"><img src="images/yahoo/new_p_17.jpg" alt=""></a></div></div>
                                         </div>
                                     </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">政治/政治要聞</a></div>
+                                                <div class="advert_text"><a href="#">政院政委重分工 黃致達督導公平會、研考、主計總處與人總</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_41.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">政治/政治要聞</a></div>
+                                                <div class="advert_text"><a href="#">「投票有壓力就報案！」 高雄檢方成立罷韓投票因應小組</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_42.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>                                                                      
                                 </div>
                             </div>
                         </div>
