--- a/index4_tech.html
+++ b/index4_tech.html
@@ -290,9 +290,27 @@
                                         <div class="advert d-flex flex-row align-items-center justify-content-start">
                                             <div class="advert_content">
                                                 <div class="advert_title"><a href="#">科技/人工智慧</a></div>
-                                                <div class="advert_text"><a href="#">Google即時翻譯超方便？逼近真人對話 線上會議、課程內容全都講給你聽！</a></div>
+                                                <div class="advert_text"><a href="./correct4.html">Google即時翻譯超方便？逼近真人對話 線上會議、課程內容全都講給你聽！</a></div>
                                             </div>
-                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_31.jpg" alt=""></div></div>
+                                            <div class="ml-auto"><div class="advert_image"><a href="./correct4.html"><img src="images/yahoo/new_p_31.jpg" alt=""></a></div></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">科技/手機APP</a></div>
+                                                <div class="advert_text"><a href="">印度「移除中國APP」爆紅卻慘遭下架！谷歌Google「4字」回應</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_43.jpg" alt=""></div></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 advert_col">
+                                        <div class="advert d-flex flex-row align-items-center justify-content-start">
+                                            <div class="advert_content">
+                                                <div class="advert_title"><a href="#">科技/手機APP</a></div>
+                                                <div class="advert_text"><a href="">Facebook更新「動態貼文」！篩選、刪除、封存更快速</a></div>
+                                            </div>
+                                            <div class="ml-auto"><div class="advert_image"><img src="images/yahoo/new_p_44.jpg" alt=""></div></div>
                                         </div>
                                     </div>
                                 </div>
